--- a/example/Enter.Dashboard/App.razor
+++ b/example/Enter.Dashboard/App.razor
@@ -1,7 +1,8 @@
 ﻿@using Enter.Dashboard.Shared
 @namespace Enter.Dashboard
 <EntThemeProvider
-    Rtl="true"
+    Rtl="false"
+    DarkMode="true"
     DrawerDefaultWidth="300">
     
     <Router AppAssembly="@typeof(App).Assembly">
