--- a/src/Enter.UI/Components/Tabs/EntTab.razor
+++ b/src/Enter.UI/Components/Tabs/EntTab.razor
@@ -35,7 +35,7 @@
         else
         {
             <div class="ent-tab-item-container-message">
-                <p>پنجره ای برای نمایش باز نشده است</p>
+                <p>No display window has been opened</p>
             </div>
         }
 
