--- a/src/Enter.UI/Styles/_variables.scss
+++ b/src/Enter.UI/Styles/_variables.scss
@@ -6,6 +6,8 @@ $breakpoints: (
         screen: 1400px,
 );
 
+
+
 // Late
 $color-late-50: #f8fafc;
 $color-late-100: #f1f5f9;
@@ -272,19 +274,33 @@ $color-rose-900: #881337;
 $color-rose-950: #4c0519;
 
 
+$color-primary: var(--ent-color-primary);
+$color-secondary: var(--ent-color-secondary);
+
+$color-light: var(--ent-color-light);
+$color-softlight: var(--ent-color-softlight);
+$color-deeplight: var(--ent-color-deeplight);
+$color-dark: var(--ent-color-dark);
+$color-softdark: var(--ent-color-softdark);
+$color-deepdark: var(--ent-color-deepdark);
+
+$color-muted: $color-neutral-700;
+
 $colors: (
         "white": white,
         "black": black,
-        "primary": $color-sky-500,
-        "secondary": $color-neutral-500,
-        "lighteen":$color-neutral-50,
-        "light":$color-neutral-100,
-        "mute":$color-neutral-600,
-        "dark":$color-neutral-900,
-        "darker":$color-neutral-950,
-        'success': $color-green-400,
-        'danger': $color-red-400,
-        'warning': $color-orange-400,
+        "primary": $color-primary,
+        "secondary": $color-secondary,
+        "light":$color-light,
+        "deeplight":$color-deeplight,
+        "softlight":$color-softlight,
+        "mute":$color-muted,
+        "dark":$color-dark,
+        "softdark":$color-softdark,
+        "deepdark":$color-deepdark,
+        'success': $color-green-500,
+        'danger': $color-red-500,
+        'warning': $color-orange-500,
         'info': $color-sky-400,
         'late-50': $color-late-50,
         'late-100': $color-late-100,
@@ -529,6 +545,8 @@ $colors: (
         'rose-900': $color-rose-900,
         'rose-950': $color-rose-950
 );
+$font-size-space: var(--ent-body-font-size-space);
+$font-size: var(--ent-body-font-size);
 
 $font-family: Vazirmatn !default;
 $font-families: (
@@ -536,14 +554,15 @@ $font-families: (
 ) !default;
 
 $font-sizes: (
-        heading: 1.602rem,
-        sub-heading: 1.424rem,
-        title: 1.266rem,
-        caption: 1.125rem,
-        null: 1rem,
-        description: 0.889rem,
-        subtitle: 0.79rem,
+        heading: calc($font-size + ($font-size-space * 8) ),
+        sub-heading: calc($font-size + ($font-size-space * 4) ),
+        title: calc($font-size + ($font-size-space * 2)),
+        caption: calc($font-size + $font-size-space),
+        null: $font-size,
+        description:  calc($font-size - $font-size-space),
+        subtitle: calc($font-size - ($font-size-space * 2))
 ) !default;
+
 $border-radius: 1rem !default;
 
 $border-radiuses: (
@@ -564,8 +583,10 @@ $border-widths: (
         5: 5px,
 ) !default;
 $border-style: solid !default;
-$border-color: $color-neutral-200 !default;
+$border-color: var(--ent-color-border) !default;
 $border: $border-width $border-style $border-color;
+$box-shadow : 0 1px 2px rgba(56,65,74,.15);
+
 $size: 1rem;
 $sizes: (
         0: 0,
@@ -1325,6 +1346,15 @@ $utilities: (
                         80:80,
                         90:90,
                         100:100,
+                ),
+        ),
+        box-shadow:(
+                property: box-shadow,
+                propertyRtl: box-shadow,
+                cssName: box-shadow,
+                breakpoint: true,
+                values: (
+                        bull: $box-shadow,
                 ),
         )
 );
