--- a/src/Enter.UI/Styles/components/_ent_drawer.component.scss
+++ b/src/Enter.UI/Styles/components/_ent_drawer.component.scss
@@ -11,8 +11,8 @@
     bottom: 0;
     top: 0;
     transition: all 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
-    background-color: white;
- 
+    background-color: $color-softlight;
+    box-shadow: $box-shadow;
     z-index: 10;
     
     &.ent-drawer--direction-start{
