--- a/src/Enter.UI/Styles/components/_ent_form.component.scss
+++ b/src/Enter.UI/Styles/components/_ent_form.component.scss
@@ -25,10 +25,10 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-
+    background-color: $color-light;
     > .ent-input-field {
         flex-grow: 1;
-        padding: 0.5rem 1rem;
+        padding: 0.625rem 1.5rem;
         border: 0;
         outline: 0;
     }
@@ -37,7 +37,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        padding: 0.5rem 1rem;
+        padding: 0.625rem 1.5rem;
         color: map-get($colors, "mute");
     }
 }
@@ -54,10 +54,10 @@
 
 .ent-input-autocomplete-container {
     margin-top: 0.25rem;
-    background-color: map-get($colors,"lighte");
+    background-color: $color-light;
 
     > .ent-input-autocomplete-list {
-        background-color: map-get($colors,"white");
+        background-color: $color-light;
         max-height: 10rem;
         overflow-y: scroll;
     }
@@ -85,12 +85,12 @@
 }
 .ent-select-container {
     margin-top: 0.25rem;
-    background-color: map-get($colors,"lighte");
+    background-color: $color-light;
 
     > .ent-select-list {
         max-height: 10rem;
         overflow-y: scroll;
-        background-color: map-get($colors,"white");
+        background-color: $color-light;
     }
 
     > .ent-select-message {
